--- a/sample-viewer/src/app/patient-page/patient-viral-seq/patient-viral-seq.component.html
+++ b/sample-viewer/src/app/patient-page/patient-viral-seq/patient-viral-seq.component.html
@@ -47,7 +47,7 @@
         </p>
 
         <!-- Dummy so the document has something to select with the data bound -->
-        <input hidden class="d-none" type="text" [value]="getSeq(data)" #rawseq>
+        <input type="text" [value]="data.DNAsequence" #rawseq>
         <i class="far fa-copy copy-icon" matTooltip="copy raw sequence to clipboard" (click)="copySeq(rawseq, 'raw')"></i>
       </div>
 
