--- a/sample-viewer/src/app/patient-page/patient-viral-seq/patient-viral-seq.component.html
+++ b/sample-viewer/src/app/patient-page/patient-viral-seq/patient-viral-seq.component.html
@@ -2,31 +2,33 @@
 
 <ng-container *ngIf="sequences && sequences.length > 0; else nodata">
   <div class="sequence-group" *ngFor="let seq of sequences">
-    <div class="container sequence-header">
+    <ng-container *ngFor="let data of seq.data">
 
-      <h4 class="virus">{{ seq.data.virus }} sequence</h4>
+      <div class="container sequence-header">
 
-      <div class="quality-rating" *ngIf="seq.data && seq.data.quality">
-        quality:
-        <i class="fas fa-star" *ngFor="let filled of seq.data.good"></i>
-        <i class="far fa-star" *ngFor="let unfilled of seq.data.bad"></i>
+        <h4 class="virus">{{ data.virus }} sequence</h4>
+
+        <div class="quality-rating" *ngIf="data && data.quality">
+          quality:
+          <i class="fas fa-star" *ngFor="let filled of seq.data.good"></i>
+          <i class="far fa-star" *ngFor="let unfilled of seq.data.bad"></i>
+        </div>
+
+        <div class="source container" [ngClass]="seq.cvisb_data ? 'cvisb-data' : 'public-data'">
+          <ng-container *ngIf="seq.cvisb_data; else public_data">
+            <svg-icon icon="cvisb" class="cvisb-icon"></svg-icon>
+            <span class="source-tag">data</span>
+          </ng-container>
+          <ng-template #public_data>
+            <span class="source-tag">public data</span>
+          </ng-template>
+        </div>
+
+        <app-format-citation [citations]="seq.publication" class="citation"></app-format-citation>
       </div>
 
-      <div class="source container" [ngClass]="seq.cvisb_data ? 'cvisb-data' : 'public-data'">
-        <ng-container *ngIf="seq.cvisb_data; else public_data">
-          <svg-icon icon="cvisb" class="cvisb-icon"></svg-icon>
-          <span class="source-tag">data</span>
-        </ng-container>
-        <ng-template #public_data>
-          <span class="source-tag">public data</span>
-        </ng-template>
-      </div>
 
-      <app-format-citation [citations]="seq.publication" class="citation"></app-format-citation>
-    </div>
-
-
-    <!-- <div class="aligned-sequence">
+      <!-- <div class="aligned-sequence">
       <div class="container sequence-header">
         <p class="sequence-label">
           aligned sequence
@@ -40,23 +42,23 @@
     </div> -->
 
 
-    <div class="raw-sequence" *ngFor="let data of seq.data">
-      <div class="container sequence-header">
-        <p class="sequence-label">
-          raw sequence
+      <div class="raw-sequence">
+        <div class="container sequence-header">
+          <p class="sequence-label">
+            raw sequence
+          </p>
+
+          <!-- Dummy so the document has something to select with the data bound -->
+          <input class="hidden" type="text" [value]="data.DNAsequence" #rawseq>
+          <i class="far fa-copy copy-icon" matTooltip="copy raw sequence to clipboard" (click)="copySeq(rawseq, 'raw')"></i>
+        </div>
+
+
+        <p class="sequence DNA-sequence">
+          {{ data.DNAsequence }}
         </p>
-
-        <!-- Dummy so the document has something to select with the data bound -->
-        <input class="hidden" type="text" [value]="data.DNAsequence" #rawseq>
-        <i class="far fa-copy copy-icon" matTooltip="copy raw sequence to clipboard" (click)="copySeq(rawseq, 'raw')"></i>
       </div>
-
-
-      <p class="sequence DNA-sequence">
-        {{ data.DNAsequence }}
-      </p>
-    </div>
-
+    </ng-container>
   </div>
 </ng-container>
 
