--- a/sample-viewer/src/app/patient-page/patient-viral-seq/patient-viral-seq.component.html
+++ b/sample-viewer/src/app/patient-page/patient-viral-seq/patient-viral-seq.component.html
@@ -1,4 +1,4 @@
-<h4 class="patient-data" id="viral-sequencing">Viral Sequencing</h4>
+<h4 class="patient-data">Viral Sequencing</h4>
 
 <ng-container *ngIf="sequences && sequences.length > 0; else nodata">
   <div class="sequence-group" *ngFor="let seq of sequences">
