--- a/sample-viewer/src/app/patient-page/patient-viral-seq/patient-viral-seq.component.html
+++ b/sample-viewer/src/app/patient-page/patient-viral-seq/patient-viral-seq.component.html
@@ -33,7 +33,7 @@
         </div>
 
         <div class="updated">
-          updated: {{ seq.dateModified ? (seq.dateModified | date: 'd MMMM yyyy') : 'unknown'}}
+          updated {{ seq.dateModified ? (seq.dateModified | date: 'd MMMM yyyy') : ': unknown'}}
         </div>
       </div>
 
