--- a/sample-viewer/src/app/patient-page/patient-viral-seq/patient-viral-seq.component.html
+++ b/sample-viewer/src/app/patient-page/patient-viral-seq/patient-viral-seq.component.html
@@ -1,9 +1,9 @@
 <ng-container *ngIf="sequences && sequences.length > 0; else nodata">
   <div class="sequence-group" *ngFor="let seq of sequences">
+    <app-provenance [dateModified]="seq.dateModified" embargoLabel="Viral Sequence" [public_data]="true" [cvisb_data]="false" [citation]="seq.citation" class="provenance"></app-provenance>
+
     <ng-container *ngFor="let data of seq.data">
-
       <div class="container sequence-header">
-
         <h4 class="virus">{{ data.virus }} sequence</h4>
 
         <div class="quality-rating" *ngIf="data && data.quality">
@@ -12,26 +12,10 @@
           <i class="far fa-star" *ngFor="let unfilled of seq.data.bad"></i>
         </div>
 
-        <div class="source container" [ngClass]="seq.cvisb_data ? 'cvisb-data' : 'public-data'">
-          <ng-container *ngIf="seq.cvisb_data; else public_data">
-            <svg-icon icon="cvisb" class="cvisb-icon"></svg-icon>
-            <span class="source-tag">data</span>
-          </ng-container>
-          <ng-template #public_data>
-            <span class="source-tag">public data</span>
-          </ng-template>
-        </div>
-
-        <app-format-citation [citations]="seq.citation" class="citation"></app-format-citation>
-
         <div class="NCBI-link" *ngIf="seq.genbankID">
           <a [href]="ncbiAccessionStub + seq.genbankID" rel="noreferrer" target="_blank">
             GenBank ID {{seq.genbankID}}
           </a>
-        </div>
-
-        <div class="updated">
-          updated {{ seq.dateModified ? (seq.dateModified | date: 'd MMMM yyyy') : ': unknown'}}
         </div>
       </div>
 
