--- a/sample-viewer/src/app/patient-page/patient-viral-seq/patient-viral-seq.component.html
+++ b/sample-viewer/src/app/patient-page/patient-viral-seq/patient-viral-seq.component.html
@@ -55,7 +55,7 @@
     </div>
 
     <div class="viralseq-files">
-      <h5 class="patient-data">files</h5>
+      <!-- <h5 class="patient-data">files</h5> -->
       <app-file-list datasetID="viralseq" [patientID]="patientID"></app-file-list>
     </div>
   </ng-container>
