--- a/sample-viewer/src/app/patient-page/patient-viral-seq/patient-viral-seq.component.html
+++ b/sample-viewer/src/app/patient-page/patient-viral-seq/patient-viral-seq.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="sequences && sequences.length > 0; else nodata">
   <ng-container *ngFor="let seq of sequences">
-    <app-provenance [dateModified]="seq.dateModified" embargoLabel="Viral Sequence" [source]="null" [public_data]="true" [cvisb_data]="false" [citation]="seq.citation" dataStatus="verified" class="provenance"></app-provenance>
+    <app-provenance [dateModified]="seq.dateModified" embargoLabel="Viral Sequence" [source]="null" [public_data]="true" [cvisb_data]="false" [citation]="seq.citation" dataStatus="final" class="provenance"></app-provenance>
 
     <div class="sequence-group">
       <ng-container *ngFor="let data of seq.data">
