--- a/sample-viewer/src/app/patient-page/patient-viral-seq/patient-viral-seq.component.html
+++ b/sample-viewer/src/app/patient-page/patient-viral-seq/patient-viral-seq.component.html
@@ -56,7 +56,7 @@
 
     <div class="viralseq-files">
       <!-- <h5 class="patient-data">files</h5> -->
-      <app-file-list datasetID="viralseq" [patientID]="patientID"></app-file-list>
+      <app-file-list [datasetID]="datasetID" [patientID]="patientID"></app-file-list>
     </div>
   </ng-container>
 </ng-container>
