add in curated alignment section

--- a/sample-viewer/src/app/viral-sequencing/viral-sequencing.component.html
+++ b/sample-viewer/src/app/viral-sequencing/viral-sequencing.component.html
@@ -1,3 +1,4 @@
 <div class="dataset-container" id="viral-sequencing-dataset">
+  <app-curated-alignments includedInDataset="lassa-viral-seq"></app-curated-alignments>
   <app-dataset-page></app-dataset-page>
 </div>
