--- a/sample-viewer/src/app/patient-page/patient-viral-seq/patient-viral-seq.component.html
+++ b/sample-viewer/src/app/patient-page/patient-viral-seq/patient-viral-seq.component.html
@@ -1,5 +1,8 @@
 <ng-container *ngIf="sequences && sequences.length > 0; else nodata">
-  <ng-container *ngFor="let seq of sequences">
+  <small *ngIf="sequences.length > 1">
+    Multiple sequences of the same virus come from different timepoints collected from the patient. Only one sequence is incldued in the curated data.
+  </small>
+  <div *ngFor="let seq of sequences" class="sequence-group">
     <app-provenance [dateModified]="seq.dateModified" embargoLabel="Virus Sequence" [source]="seq.source"
     [public_data]="seq.citation" [changes]="seq.correction"
     [citation]="seq.citation" [dataStatus]="seq.dataStatus" class="provenance"></app-provenance>
@@ -7,7 +10,9 @@
     <div class="sequence-group">
       <ng-container *ngFor="let data of seq.data">
         <div class="container sequence-header">
-          <h4 class="virus">{{ data.virus }} sequence</h4>
+          <h4 class="virus">{{ data.virus }} sequence
+            <span *ngIf="sequences.length > 1 && data.visitCode">(timepoint {{data.visitCode}})</span>
+          </h4>
 
           <div class="quality-rating" *ngIf="data && data.quality">
             quality:
@@ -60,7 +65,7 @@
       <!-- <h5 class="patient-data">files</h5> -->
       <app-file-list [datasetID]="datasetID" [patientID]="patientID"></app-file-list>
     </div>
-  </ng-container>
+  </div>
 </ng-container>
 
 <ng-template #nodata>
