--- a/sample-viewer/src/app/patient-page/patient-viral-seq/patient-viral-seq.component.html
+++ b/sample-viewer/src/app/patient-page/patient-viral-seq/patient-viral-seq.component.html
@@ -66,7 +66,7 @@
 
     <div class="viralseq-files">
       <!-- <h5 class="patient-data">files</h5> -->
-      <app-file-list [experimentIDs]="seq.experimentID" v-if="seq.experimentID"></app-file-list>
+      <app-file-list [experimentIDs]="[seq.experimentID]" v-if="seq.experimentID"></app-file-list>
     </div>
   </div>
 </ng-container>
